# VIRA

./: test_agent.py
MCPserver_gget/: pyproject.toml  server.py
MCPserver_gget/mcpserver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
MCPserver_promoteraccessibility/: README.md  pyproject.toml  server.py
MCPserver_promoteraccessibility/original_pipeline/Step 1_Peak-caling/: README.txt
MCPserver_promoteraccessibility/original_pipeline/Step 2_ Extracting_TSS_peaks/2_Output/: Matched_TSS_100_TS_50_BRRF1_PEAKS_max_width_16.fraction_max_peaks_0.2.min_single_pos_depth_10.strand_MERGED.bed  Matched_TSS_100_TS_50_Cntl_PEAKS_max_width_16.fraction_max_peaks_0.2.min_single_pos_depth_10.strand_MERGED.bed  Unmatched_TSS_100_TS_50_Cntl_PEAKS_max_width_16.fraction_max_peaks_0.2.min_single_pos_depth_10.strand_MERGED.bed
MCPserver_promoteraccessibility/original_pipeline/Step 3_Choosing_main_peaks/: readme.txt
MCPserver_promoteraccessibility/original_pipeline/Step 4_Extracting_TPM/: readme.txt
MCPserver_promoteraccessibility/original_pipeline/Step 4_Extracting_TPM/1_Scripts/: 3_extracting_tpm_for_atac_seq.pl
MCPserver_promoteraccessibility/original_pipeline/Step 4_Extracting_TPM/2_Output/: Induced_genes_DG75_BRRF1.txt  Suppressed_genes_DG75_BRRF1.txt  readme.txt
MCPserver_promoteraccessibility/original_pipeline/Step 5_Plot/2_Scripts/: Normalized_atac_heatmap_induced.py  Normalized_atac_heatmap_suppressed.py
MCPserver_promoteraccessibility/pipeline/: __init__.py  run_pipeline.py  step2_tss_peaks.py  step3_main_peaks.py  step4_extract_tpm.py  step5_plot.py
(+11 files in other folders)
