[project]
name = "mcpserver-promoteraccessibility"
version = "0.1.0"
description = "Reusable ATAC-seq promoter-accessibility pipeline (Steps 2-5) exposed as an MCP server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pyBigWig>=0.3.22",
    "openpyxl>=3.1",
]

[project.scripts]
promoter-accessibility = "pipeline.run_pipeline:main"
promoter-accessibility-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
py-modules = ["server"]
